fix: align checkout auth and shipping flows